# genai-os

./: .dockerignore  .env.debug  .gitignore  Dockerfile  LICENSE  README.md  README_TW.md  api_curl.txt  api_web.txt  build.sh  compose.yaml  composer.json  debug.txt  docker-compose.yml  docker_prone.sh  layout.yaml  main.py  manager.Dockerfile  nginx_config  package-lock.json  package.json  requirements.txt  run_production.sh  sample.env  startWeb.bat
client/: README.md  pyproject.toml
client/example/: openai_api.py  requirements.txt
client/src/llm_safety_guard/: __init__.py  buffer.py  detection_client.py  llm_safety_guard.py  target_cache.py
client/test/: test_buffer.py  test_llm_safety_guard.py
model_workers/model_api_server/: Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
model_workers/model_api_server/example/: Dockerfile  run.sh
model_workers/model_api_server/example/filters/: opencc.py
model_workers/model_api_server/example/models/: reflect.py
model_workers/model_api_server/src/model_api_server/: agent_client.py  api_application.py  api_server.py  config.py  default_layout.yaml  default_logging.yaml  dummy.py  interfaces.py  main.py  metrics_helper.py  model_layout.py
multi-chat/model_workers/worker_framework/: .dockerignore  pyproject.toml
src/executor/: .gitignore  README.md  README_TW.md  base.py  chatgpt.py  debug.py  dummy.py  geminipro.py  huggingface.py  llamacpp.py  ollama_proxy.py  pyproject.toml  requirements.txt  requirements1.txt  requirements2.txt  sysinfo.py  taide-api.py  whisper.py
src/executor/browser/: README.md  main.py
src/executor/browser/src/: browser_executor.py  recursive_url_multimedia_loader.py
src/executor/docqa/: .gitignore  README.md  docqa.py  download_model.py  requirements.txt  searchqa.py
src/executor/docqa/archive/: .dockerignore  docker-compose-production.yml  docker-compose-search-qa.yml  docker-compose.yml  run_production.sh  web_adapter.py
src/executor/docqa/eval/: docqa.py  eval.py
src/executor/docqa/lang/en/: docqa.en.yml  searchqa.en.yml
src/executor/docqa/lang/en/prompt_template/: llm_input_qa.mustache  llm_input_summary.mustache
src/executor/docqa/lang/zh-tw/: docqa.zh-tw.yml  searchqa.zh-tw.yml
src/executor/docqa/lang/zh-tw/prompt_template/: llm_input_qa.mustache
src/executor/docqa/lang/zh_tw/: docqa.zh_tw.yml  searchqa.zh_tw.yml
src/executor/docqa/lang/zh_tw/prompt_template/: llm_input_qa.mustache  llm_input_summary.mustache
src/executor/docqa/src/: crawler.py  docqa.py  document_store.py  document_store_factory.py  embedding_model_manager.py  kuwa_llm_client.py  parallel_splitter.py  recursive_url_multimedia_loader.py
src/executor/file_manager/: main.py
src/executor/framework/: __init__.py  llm_worker.py  logger.py  metrics.py
src/executor/gongwen_eng/: gongwen_eng.py  taskPrompt.py
src/executor/gongwen_eng/gondoc_gen/: ex1.txt  ex10.txt  ex11.txt  ex2.txt  ex3.txt  ex5.txt  ex6.txt  ex7.txt  ex8.txt  ex9.txt
src/executor/image_generation/: README.md  README_TW.md  dall_e.py  download_model.py  main.py  requirements.txt  stable-diffusion.py
src/executor/model_workers/worker_framework/example/models/: reflect.py
src/executor/pipe/: main.py
src/executor/pipe/src/: subprocess_helper.py  text_buffer.py
src/executor/pipe/test/: test-extract-arguments.py
src/executor/retriever/: README.md  main.py
src/executor/retriever/lang/: rag.en.yaml
src/executor/retriever/lang/en/: searchqa.en.yml
src/executor/retriever/lang/en/prompt_template/: llm_input_qa.mustache  llm_input_translate.mustache
src/executor/retriever/src/: document_store.py  embedding_model_store.py  generator_executor.py  parallel_splitter.py  rag_executor.py  recursive_url_multimedia_loader.py  retriever_executor.py
src/executor/safety-guard/: detector.Dockerfile
src/executor/safety-guard/api/v1/: internal.yaml  records.pickle
src/executor/safety-guard/api/v1/example/: server.py
src/executor/safety-guard/client/src/llm_safety_guard/: llm_safety_guard.py
src/executor/safety-guard/detector/src/: local_storage.py
src/executor/safety-guard/detector/src/core/: llama_guard.py
src/executor/safety-guard/lib/model/: detector.py
src/executor/safety-guard/manager/: requirements.txt
src/executor/safety-guard/scripts/model_worker/: run_production.sh
src/executor/speech_recognition/: README.md  README_TW.md  download_model.py  main.py  requirements.txt  whispers2t.py
src/executor/speech_recognition/archive/: whispercpp.py
src/executor/speech_recognition/src/: diarizer.py  separator.py  speaker_diarization.py  transcriber.py
src/executor/src/kuwa/executor/: __init__.py  base_executor.py  cli.py  llm_executor.py  llm_worker.py  logger.py  metrics.py  modelfile.py  util.py
src/executor/src/kuwa/executor/example/: .gitkeep
src/executor/stbot/: main.py  requirements.txt
src/executor/stbot/summary/: chroma.sqlite3
src/executor/test/: test_llm_executor.py  test_modelfile.py
src/executor/token_counter/: main.py
src/executor/uploader/: main.py  requirements.txt
src/executor/webqa/: README.md  docqa.py  requirements.txt  webqa.py
src/executor/webqa/archive/: README.md
src/executor/webqa/lang/en/: webqa.en.yml
src/executor/webqa/src/: document_store.py  kuwa_llm_client.py  webqa.py
src/executor/working/: README.md
src/executor/working/docqa/: webqa.py
src/executor/working/google_search/: .env.example  layout.yaml
src/executor/working/model_workers-archive/: README.md
src/executor/working/model_workers-archive/contextual_chinese_convert/: Dockerfile  install_dict.sh  requirements.txt
src/executor/working/model_workers-archive/worker_framework/: pyproject.toml
src/executor/working/safety-guard/: .gitignore  compose.yaml
src/executor/working/safety-guard/client/: LICENSE  README.md
src/kernel/: README.md  main.py  pyproject.toml  requirements.txt
src/kernel/routes/: chat.py  executor.py
src/kernel/src/: functions.py  logger.py  safety_middleware.py
src/kernel/src/kuwa/kernel/: functions.py  logger.py  main.py  safety_middleware.py  variable.py
(+1785 files in other folders)
