[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-safety-guard"
version = "0.2.0"
authors = [
  { name="Yung-Hsiang Hu", email="iftnt1999@gmail.com" },
]
description = "The client library of the Safety Guard system."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies=[
  'grpcio>=1.60.0',
  'requests>=2.31.0',
  'protobuf>=4.25.1'
]

[project.urls]
"Homepage" = "https://www.taide.tw/"
"Bug Tracker" = ""