[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model_api_server"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A framework to serve and compose LLMs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.taide.tw/"
"Bug Tracker" = ""

[project.scripts]
model-api-server = "model_api_server.main:main"