[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuwa"]

[project]
name = "kuwa-kernel"
version = "0.3.1"
authors = [
  { name="Drift", email="taifu9920923@gmail.com" },
  { name="Yung-Hsiang Hu", email="iftnt1999@gmail.com" },
]
description = "The kernel of Kuwa GenAI OS to manage GenAI applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies=[
  'click',
  'requests',
  'flask',
  'flask_sse',
  'APScheduler',
  'uvicorn'
]

[project.urls]
"Homepage" = "https://kuwaai.org/os/Intro"
"Bug Tracker" = "https://github.com/kuwaai/genai-os/issues"

[project.scripts]
kuwa-kernel = "kuwa.kernel.main:main"